tests/pos-custom-args/deptypes.scala
case class Vec(size: Int)

val x: Vec {val size: 10} = ???  // error: not yet implemented
val y: Vec(10) = ???  // error: not yet implemented
